--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,10 +5,10 @@
 </head>
 <body>
     <h1>WebAssembly Demo</h1>
-    
+    <script src="/js/wasm_exec.js"></script>
     <script>
         const go = new Go();
-        WebAssembly.instantiateStreaming(fetch("/app/webassembly/main.wasm"), go.importObject)
+        WebAssembly.instantiateStreaming(fetch("/wasm/main.wasm"), go.importObject)
             .then(result => {
                 go.run(result.instance);
             })
