show uploaded image

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <button id="getSizeButton">ファイルサイズを取得する</button>
     <button id="convertToBlackAndWhiteButton">白黒に変換する</button>
     <script src="/js/wasm_exec.js"></script>
+    <img id="resultImage" src="" alt="Converted Image"/>
     <script>
         const go = new Go();
 
