--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <input type="file" id="fileInput" accept="image/*">
     <button id="getSizeButton">ファイルサイズを取得する</button>
     <button id="showUploadedImageButton">選択画像を表示</button>
+    <button id="convertToBlackAndWhiteButton">選択画像を白黒に反転</button>
     <script src="/js/wasm_exec.js"></script>
-    <img id="resultImage" src="" alt="Converted Image"/>
     <script>
         const go = new Go();
 
@@ -41,6 +41,20 @@
                         reader.onload = function() {
                             const arrayBuffer = this.result;
                             showUploadedImage(arrayBuffer);
+                        };
+                        reader.readAsArrayBuffer(file);
+                    }
+                });
+
+                const convertToBlackAndWhiteButton = document.getElementById('convertToBlackAndWhiteButton');
+
+                convertToBlackAndWhiteButton.addEventListener('click', function() {
+                    const file = fileInput.files[0];
+                    if (file) {
+                        const reader = new FileReader();
+                        reader.onload = function() {
+                            const arrayBuffer = this.result;
+                            convertToBlackAndWhite(arrayBuffer);
                         };
                         reader.readAsArrayBuffer(file);
                     }
